# ai-playground

docs/: PRD.md
fireflies_scripts/: .env  fireflies-transcript-fetcher.py  fireflies_fetcher.py  run_fireflies.py  test_api.py
pdf/: package-lock.json  package.json  send-pdf.js
smolagents/multi-agent-thing/: mr_longy.py  pyproject.toml
smolagents/multi-agent-thing/agents/: web-search-agent.py
smolagents/multi-agent-thing/multi_agent_thing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
